a股mcp重构